--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "next": "^12.0.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.5.2"
   }
 }
