--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.37"
   }
 }
